syntax = "proto3";

package booking;

option go_package = "./proto/booking;booking";

service BookingService {
    rpc CreateBooking(CreateBookingRequest) returns (CreateBookingResponse);
    rpc GetBooking(GetBookingRequest) returns (GetBookingResponse);
}

message CreateBookingRequest {
    int32 hotel_id = 1;
    int32 client_id = 2;
}

message CreateBookingResponse {
    string message = 1;
    int32 booking_id = 2;
}

message GetBookingRequest {
    int32 booking_id = 1;
}

message GetBookingResponse {
    int32 booking_id = 1;
    int32 hotel_id = 2;
    int32 client_id = 3;
    string status = 4;
}
